# Agate

./: .gitignore  CMakeLists.txt  README.md
cmake/: nvcuda_compile_ptx.cmake
ext/: CMakeLists.txt
ext/glad/: glad.c  glad.h
ext/stb/: README.md
include/: pch.h
include/Agate/: Agate.h
include/Agate/Common/: Log.h  Window.h
include/Agate/Core/: Aplication.h  Common.h  Error.h  GLDisplay.h  Interfaces.h  Log.h  Options.h  OptixRenderer.h  OptixState.h  Optix_Renderer.h  Window.h
include/Agate/Shader/: AnyHit.cu  ClosestHit.cu  CudaBufferView.hpp  Defines.hpp  Geometry.hpp  Hello.cu  LaunchParameter.h  Matrix.h  Miss.cu  Params.h  RayGeneration.cu  VertexInfo.h  help.h  optixHello.cu  random.h  vec_math.h  vector_math.h
include/Agate/Util/: AABB.hpp  Camera.hpp  CudaBuffer.h  CudaBufferView.hpp  CudaOutputBuffer.hpp  Material.hpp  ModelData.cpp  ModelData.hpp  MouseTracker.hpp  Quaternion.hpp  ReadFile.h  Record.hpp  Scene.cpp  Scene.hpp  Tracker.hpp  Utils.h
include/Agate/util/: Timer.h
include/CGT/: CGT.h  common.h
include/CGT/misc/: async.h  async_cache.h  color_conversion.h  dxgi_format_helper.h  ring.h  thread_pool.h
include/CGT/util/: Log.h  bitmap.h  frame.h  hash.h  texture.h  timer.h  uMath.h  uRandom.h  uSampling.h  uString.h  uTransform.h
src/: Agate.cpp  CGT.cpp  common.cpp  main.cpp  pch.cpp
src/Common/: Common.cpp  Window.cpp
src/Core/: Aplication.cpp  Common.cpp  GLDisplay.cpp  OptixRenderer.cpp  Optix_Renderer.cpp  Window.cpp
src/Util/: ModelData.cpp  Scene.cpp
src/misc/: async.cpp  stb.cpp  thread_pool.cpp
src/model/gltf/: gltf_common.cpp  gltf_common.h
src/util/: Log.cpp  bitmap.cpp  color_conversion.cpp  dxgi_format_helper.cpp  hash.cpp  texture.cpp  timer.cpp  uMath.cpp  uSampling.cpp  uString.cpp  uTransform.cpp
test/: CMakeLists.txt  test.cpp  test_uMath.cpp  test_uString.cpp
